--- a/paginas/index.html
+++ b/paginas/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cadastro Empresas & Clientes</h1>
-    <h4>{{nome}}</h4>
+    <h1>BEM VINDO(A) AO SITE  CANNABICO</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias totam ipsa maxime suscipit quia nulla dolores maiores pariatur, hic aliquid quae earum laborum! Consequuntur, cupiditate omnis minima asperiores culpa necessitatibus.</p>
 </body>
 </html>
